# apl-sidecar

./: .gitignore  BASELINE_TEST_REPORT.md  CHANGELOG.md  CLA.md  CONTRIBUTING.md  CURRENT_REPO_MAP.md  GITHUB_SANITIZATION_CHECKLIST.md  IMPLEMENTATION_MAPPING.md  IMPLEMENTATION_REPORT.md  LICENSE  LICENSING.md  README.md  RECEIPT_STANDARD.md  RELICENSE_REPORT.md  RESTORE_CANONICAL_ID.md  SECURITY.md  conftest.py  pyproject.toml
.github/: RELEASE_HYGIENE.md
.github/workflows/: ci.yml  release.yml
LICENSES/: FSL-1.1-ALv2.md
adapters/: base.py  mock.py  registry.py
adapters/byok/: _http.py  anthropic_provider.py  openai_provider.py
adapters/local_stub/: provider.py
adapters/mock_provider_a/: provider.py
adapters/mock_provider_b/: provider.py
app/local_playground/: README.md  app.js  index.html  style.css
cli/: apl.py
cli/commands/: _common.py  _resources.py  _signing.py  _verifier_boot.py  break_receipt.py  demo.py  inspect.py  mask.py  preview.py  rehydrate.py  run_live.py  run_mock.py  verify.py
docs/: byok_reference.md  claims-and-limits.md  enterprise_gateway.md  experience_modes.md  exposure_model.md  fragmentation.md  hosted_live_demo.md  how_quality_is_preserved.md  masking_levels.md  not_claims.md  private_mode.md  provider-adapters.md  roadmap_a2a.md  scenario-packs.md
examples/00_private_idea/: README.md  final_rehydrated_answer.txt  input.original.example.txt  inspect.expected.txt  local_only.json  masking_plan.yaml  mock_answer_a.txt  mock_answer_b.txt  provider_a_payload.txt  provider_b_payload.txt  tampered_receipt.example.json
examples/00_private_matter/: README.md  final_rehydrated_answer.txt  input.original.example.txt  inspect.expected.txt  local_only.json  masking_plan.yaml  mock_answer_a.txt  mock_answer_b.txt  provider_a_payload.txt  provider_b_payload.txt  receipt.json  tampered_receipt.example.json
relay/: README.md  __init__.py  openai_proxy.py  relay_server.py
scripts/: smoke_installed_wheel.py
spec/: README.md  apl-oss-demo-key-02.pem  demo_policy_manifest.json  policy_manifest.schema.json  receipt.schema.json
spec/conformance/v0.1.0/: README.md  (+2 more)
tests/: _schema_check.py  test_adapters.py  test_byok_adapters.py  test_demo.py  test_host_normalization.py  test_no_deprecated_terms.py  test_nway.py  test_openai_proxy.py  test_packaged_resources.py  test_policy_schema.py  test_public_claims.py  test_receipt_verify.py  test_relay.py  test_relicensing_terms.py  test_run_live.py  test_spdx_headers.py  test_tamper_vectors.py
verifier/: README.md  apl_verify.py
(+29 files in other folders)
