[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "apl-sidecar"
version = "0.1.0"
description = "Local exposure control and signed receipts for sensitive AI tasks"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = ["cryptography", "PyYAML"]

[project.optional-dependencies]
dev = ["jsonschema", "pytest", "ruff"]

[project.scripts]
apl = "cli.apl:main"

[tool.setuptools.packages.find]
include = ["adapters*", "app*", "cli*", "examples*", "relay*", "spec*", "verifier*"]

[tool.setuptools.package-data]
examples = ["*/*"]
app = ["local_playground/*"]
spec = ["demo_policy_manifest.json", "apl-oss-demo-key.pem"]

[tool.setuptools.exclude-package-data]
examples = ["*/receipt.local.json", "*/receipt.live.json"]

[tool.ruff]
line-length = 100
target-version = "py311"

